[gd_scene load_steps=3 format=2]

[ext_resource path="res://scenes/spells/Spell.gd" type="Script" id=1]

[sub_resource type="CircleShape2D" id=1]
radius = 53.1565

[node name="Spell" type="Area2D"]
script = ExtResource( 1 )

[node name="Sprite" type="Sprite" parent="."]

[node name="AliveTimer" type="Timer" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
scale = Vector2( 0.4143, 0.4143 )
shape = SubResource( 1 )

[node name="CooldownTimer" type="Timer" parent="."]
wait_time = 7.0
one_shot = true

[connection signal="area_entered" from="." to="." method="_on_Spell_area_entered"]
[connection signal="timeout" from="AliveTimer" to="." method="_on_AliveTimer_timeout"]
